<resources>
    <string name="app_name">healthhunt</string>
    <string name="server_client_id">415941616381-aqtf7rcsr1mskdpv57519e440882fcbq.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2014330465547457</string>
    <string name="fb_login_protocol_scheme">fb2014330465547457</string>
    <string name="youtube_key">AIzaSyAOaVvQF0liphCcch2futZMQvrdVUi-WYQ</string>
    <string name="google_place_key">AIzaSyAOaVvQF0liphCcch2futZMQvrdVUi-WYQ</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="skip">Skip</string>
    <string name="healthhunt">healthhunt</string>
    <string name="login_with">Login with</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bio">Bio</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signup_with">Sign Up with</string>
    <string name="receive_product_offer">Receive product offers and discount offers on marketplace</string>
    <string name="terms_and_conditions_details">By signing up, you agree to Terms and Conditions and Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="please_wait">Please Wait</string>
    <string name="setup_new_password">Set Up new password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="alert">Alert!</string>
    <string name="try_again">Try again</string>
    <string name="email_validation_msg">Please enter Valid Email</string>
    <string name="password_validation_msg">Please enter Password</string>
    <string name="username_validation_msg">Please enter Username(First name or Last name)</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="password_limit">Password must be of minimum 8 characters</string>
    <string name="select_at_least_5_tags">Select at least 5 tags to personalize your feed</string>
    <string name="done">Done</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="select_all">Select all</string>
    <string name="exercise">Exercise</string>
    <string name="enter_the_city">Enter the city</string>
    <string name="explore_new_things">Explore a lot of new things about mental and physical health</string>
    <string name="get_started">Get started</string>
    <string name="swipe_left_and_right">Swipe left and right</string>
    <string name="swipe_right_back">Swipe right to go back to previous page</string>
    <string name="link_sent">A link to reset your password has been sent to  </string>
    <string name="view_all">View all</string>
    <string name="my_feed">My Feed</string>
    <string name="my_hunts">My Hunts</string>
    <string name="watch">Watch</string>
    <string name="shop">Shop</string>
    <string name="choose_category">Choose categories to show</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="read_more">See more</string>
    <string name="read_less">See less</string>
    <string name="comments">Comments</string>
    <string name="write_comments_here">Write your comment here</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="read_time">%s min read</string>
    <string name="close_all">Close all</string>
    <string name="healthhunt_shop_content">All things good, under one roof! Organic food, yoga practitioners, relaxing spa massages, healthy snacking items, reflexology sessions, and many more…everything a wellness enthusiast can ask for, can be found at one place – healthhunt shop!</string>
    <string name="healthhunt_my_hunts_content">Cards You\'ve Saved And Received, Under one tab.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="buy">Buy</string>
    <string name="browser">Browser</string>
    <string name="share">Share</string>
    <string name="download_this_article">Download this article</string>
    <string name="download_this_product">Download this product</string>
    <string name="Shipping_charges_apply">Shipping charges apply</string>
    <string name="Loose_Square_Marketing">Loose Square Marketing Solutions</string>
    <string name="healthhunt_shop">Healthhunt shop</string>
    <string name="filter">Filter</string>
    <string name="product">Product</string>
    <string name="city">City</string>
    <string name="brancd_name">Brand name</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="search_by_product_type">Search by product type</string>
    <string name="search_by_brand_name">Search by brand name</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="removed">Removed</string>
    <string name="approved">Approved</string>
    <string name="received">Received</string>
    <string name="downloaded">Downloaded</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="consult_an_expert">Consult An Expert</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change profile photo</string>
    <string name="server_error">Server error</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="related_articles">Related articles</string>
    <string name="related_products">Related products</string>
    <string name="posted_in">posted in</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log Out</string>
    <string name="tags">Tags</string>
    <string name="options">Options</string>
    <string name="help_us_match_your_taste">Help Us Match Your Taste</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="corporate_wellness">Corporate wellness</string>
    <string name="corporate_wellness_details">Are you a business/institution looking to bring some health and wellness into your team?

\n \nA healthy lifestyle, including fitness, proper nutrition, and a healthy work-life balance, is essential for an individual to perform well in any area of life. However, with the hectic pace of life today, it is easy to forget to take care of oneself. Overwhelming stress, a sedentary routine, and poor lifestyle choices restrain optimum performance at work. Employees are availing their sick leaves more than ever, and productivity is going down. If left unchecked, not only is the health of the employees at stake, but also the health of the company.

\n \nWe at healthhunt have the perfect tool to help you get started. Contact us at <a href = "info@healthhunt.in">info@healthhunt.in</a> for more details.</string>
    <string name="schools_and_colleges">Schools and colleges</string>
    <string name="schools_and_colleges_details">We at healthhunt believe that the health and wellness revolution should begin right from childhood. If good habits are inculcated from the start, our children will grow up to be healthy adults. Our aim is to make healthy living a part of everyone’s lifestyle, both of parents as well as of students. In today’s fast-paced world, stress is a major contributor to being unhealthy and diseased. Apart from that, poor eating habits, the lack of time and motivation to exercise, and emotional issues are wreaking havoc. Even young children are not spared from these toxic problems. This is the reason that we are inviting schools and colleges to join our #healthrevolution.

\n \nIt’s as easy as 1-2-3 to be a part of this beautiful and essential change. Once you register with us, you can choose your categories, and we will provide to you content pertaining to the same. This content can be provided to the parents of the children studying in your school via your website, handouts, or any other way of dissemination that you see fit.

\n \nEmail us today to get started <a href = "info@healthhunt.in">info@healthhunt.in</a> </string>
    <string name="daily_wellbeing">Daily wellbeing</string>
    <string name="daily_wellbeing_details">To help you be the best you can, health-wise, we bring to you daily doses of wellbeing, in the form of our varied, credible, and easily actionable content. Our tips and remedies are easy to implement, and will lead you down the path of good health. We believe that health is holistic, and not just physical – it is also mental, sexual, emotional, spiritual, and social. Content based on that is designed to help you achieve your goal of living a balanced, healthy lifestyle – day in and day out.</string>
    <string name="advertise_with_us">Advertise with us</string>
    <string name="advertise_with_us_details">Please contact us at <a href = "sales@healthhunt.in"></a>sales@healthhunt.in to learn more about our advertising opportunities.</string>
    <string name="promote_your_brand">Promote your brand</string>
    <string name="promote_your_brand_details">Are you a brand providing health and wellness products or services? We at healthhunt will market your unique wellness product/service. Contact us at <a href = "market@healthhunt.in">market@healthhunt.in</a> for more details.</string>
    <string name="careers">Careers</string>
    <string name="careers_details">Please contact us at <a href = "careers@healthhunt.in">careers@healthhunt.in</a></string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_details">We’d love to hear from you! Send us a mail at <a href = "info@healthhunt.in">info@healthhunt.in</a></string>
    <string name="contribute">Contribute</string>
    <string name="contribute_details">Are you a snappy writer who can make eating celery sound like fun? Our community of writers consists of individuals who can inspire people to live, love, and think health. Areas of focus include Nutrition, Fitness, Organic Beauty and Lifestyle, Mental Wellbeing, and Love. Send in your details and samples of previous work to <a href = "submit@healthhunt.in">submit@healthhunt.in</a></string>
    <string name="what_is_it">What is it?</string>
    <string name="what_is_it_details">Are you a business/institution looking to bring some health and wellness into your team?

\n \nA healthy lifestyle, including fitness, proper nutrition, and a healthy work-life balance, is essential for an individual to perform well in any area of life. However, with the hectic pace of life today, it is easy to forget to take care of oneself. Overwhelming stress, a sedentary routine, and poor lifestyle choices restrain optimum performance at work. Employees are availing their sick leaves more than ever, and productivity is going down. If left unchecked, not only is the health of the employees at stake, but also the health of the company.

\n \inWe at healthhunt have the perfect tool to help you get started. Contact us at <a href = "info@healthhunt.in">info@healthhunt.in</a> for more details.</string>
    <string name="health_council_team">Health council team</string>
</resources>