<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/terms_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@string/font_family_medium"
        android:text="@string/terms_and_conditions"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/terms_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hh_edittext_text_color"
            android:fontFamily="@string/font_family_regular"
            android:gravity="left"
            android:textSize="16sp"/>

    </ScrollView>
</LinearLayout>