<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/get_started_view">

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:src="@mipmap/on_boarding_screen1"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/skip"
            android:textColor="@color/hh_grey_dark"
            android:fontFamily="@string/font_family_regular"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:background="?attr/actionBarItemBackground"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/get_started_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/on_board_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_new_things"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="9dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textColor="@color/hh_onboarding_swip_text_color"
            />

        <Button
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:background="@drawable/button_bg"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:fontFamily="@string/font_family_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:fontFamily="@string/font_family_regular"
            android:text="@string/swipe_left_and_right"
            android:visibility="gone"
            android:textColor="@color/hh_grey_dark"
            android:textSize="14sp"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>