<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/hh_background_light"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:textSize="20sp"
                    android:text="@string/corporate_wellness"
                    android:textColor="@color/hh_edittext_text_color"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@string/font_family_regular"
                    android:textSize="16sp"
                    android:text="@string/corporate_wellness_details"
                    android:textColor="@color/hh_edittext_text_color"
                    android:autoLink="email"
                    android:textColorLink="@color/hh_green_light2"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hh_line_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:textSize="20sp"
                    android:text="@string/schools_and_colleges"
                    android:textColor="@color/hh_edittext_text_color"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@string/font_family_regular"
                    android:textSize="16sp"
                    android:text="@string/schools_and_colleges_details"
                    android:textColor="@color/hh_edittext_text_color"
                    android:autoLink="email"
                    android:textColorLink="@color/hh_green_light2"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hh_line_color"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:textSize="20sp"
                    android:text="@string/daily_wellbeing"
                    android:textColor="@color/hh_edittext_text_color"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@string/font_family_regular"
                    android:textSize="16sp"
                    android:text="@string/daily_wellbeing_details"
                    android:textColor="@color/hh_edittext_text_color"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hh_line_color"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>